--- a/final-project/index.html
+++ b/final-project/index.html
@@ -5,6 +5,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <script src="https://kit.fontawesome.com/931c767dbc.js" crossorigin="anonymous"></script>
     <title>
         Xiaoyu Ding Final Project
     </title>
@@ -51,21 +52,22 @@
         <!-- Adding home section  -->
         <section class="box f-home">
             <!-- <img class="f-banner" src="images/main-banner.jpg" alt="f-banner"> -->
-            <div class="backcolor"></div>
-            <h1>
-                Welcome to Three Star Media
-            </h1>
-            <p class="f-homep">
-                HTML (HyperText Markup Language) is the most basic building block of the Web.
-                It defines the meaning and structure of web content.
-                Other technologies besides HTML are generally used to describe a web page's appearance/presentation
-                (CSS)
-                or functionality/behavior (JavaScript).
-            </p>
+            <article>
+                <h1>
+                    Welcome to Three Star Media
+                </h1>
+                <p class="f-homep">
+                    HTML (HyperText Markup Language) is the most basic building block of the Web.
+                    It defines the meaning and structure of web content.
+                    Other technologies besides HTML are generally used to describe a web page's appearance/presentation
+                    (CSS)
+                    or functionality/behavior (JavaScript).
+                </p>
 
-            <div class="button f-connectbutton">
-                <p>Connect with us</p>
-            </div>
+                <div class="button f-connectbutton">
+                    <a href="">Connect Us <i class="fas fa-play"></i></a>
+                </div>
+            </article>
             <!-- <a href="#connectus" class="connectus-link">Connect with us</a> -->
         </section>
 
@@ -93,69 +95,70 @@
         <section class="box f-services">
 
             <h2>Our Services</h2>
+            <div class="serveicespage">
+                <!-- *************digtal transformation *************-->
+                <div class="service f-digital">
+                    <img class="f-digitalimg" src="images/digital.jpg" alt="digital image">
+                    <h3>Digtal Transformation</h3>
+                    <p class="digital"> HTML (HyperText Markup Language) is the most basic building block of the Web.
+                        It defines the meaning and structure of web content.
+                    </p>
 
-            <!-- *************digtal transformation *************-->
-            <div class="f-digital">
-                <img class="f-digitalimg" src="images/digital.jpg" alt="digital image">
-                <h3>Digtal Transformation</h3>
-                <p class="digital"> HTML (HyperText Markup Language) is the most basic building block of the Web.
-                    It defines the meaning and structure of web content.
-                </p>
-
-                <div class="f-digitalbutton">
-                    <p>Digital Plans</p>
+                    <div class="f-digitalbutton">
+                        <a href="">Digital Plans<i class="fas fa-play"></i></a>
+                    </div>
                 </div>
-            </div>
 
-            <!-- *************Marketing******************* -->
-            <div class="f-marketing">
-                <img class="f-marketingimg" src="images/marketing.jpg" alt="marketing image">
-                <h3>Marketing</h3>
-                <p class="marketing"> HTML (HyperText Markup Language) is the most basic building block of the Web.
-                    It defines the meaning and structure of web content.
-                </p>
+                <!-- *************Marketing******************* -->
+                <div class="service f-marketing">
+                    <img class="f-marketingimg" src="images/marketing.jpg" alt="marketing image">
+                    <h3>Marketing</h3>
+                    <p class="marketing"> HTML (HyperText Markup Language) is the most basic building block of the Web.
+                        It defines the meaning and structure of web content.
+                    </p>
 
-                <div class="f-marketingbutton">
-                    <p>Marketing Plans</p>
+                    <div class="f-marketingbutton">
+                        <a href="">Marketing Plans<i class="fas fa-play"></i></a>
+                    </div>
                 </div>
-            </div>
 
-            <!-- ********************Video Production**************************** -->
-            <div class="f-video">
-                <img class="f-videoimg" src="images/video.jpg" alt="video image">
-                <h3>Video Production</h3>
-                <p class="video"> HTML (HyperText Markup Language) is the most basic building block of the Web.
-                    It defines the meaning and structure of web content.
-                </p>
+                <!-- ********************Video Production**************************** -->
+                <div class="service f-video">
+                    <img class="f-videoimg" src="images/video.jpg" alt="video image">
+                    <h3>Video Production</h3>
+                    <p class="video"> HTML (HyperText Markup Language) is the most basic building block of the Web.
+                        It defines the meaning and structure of web content.
+                    </p>
 
-                <div class="f-videobutton">
-                    <p>Video Plans</p>
+                    <div class="f-videobutton">
+                        <a href="">Video Plans<i class="fas fa-play"></i></a>
+                    </div>
                 </div>
-            </div>
 
-            <!-- *********************Web Development*************************** -->
-            <div class="f-web">
-                <img class="f-webimg" src="images/web.jpg" alt="web image">
-                <h3>Web Development</h3>
-                <p class="web"> HTML (HyperText Markup Language) is the most basic building block of the Web.
-                    It defines the meaning and structure of web content.
-                </p>
+                <!-- *********************Web Development*************************** -->
+                <div class="service f-web">
+                    <img class="f-webimg" src="images/web.jpg" alt="web image">
+                    <h3>Web Development</h3>
+                    <p class="web"> HTML (HyperText Markup Language) is the most basic building block of the Web.
+                        It defines the meaning and structure of web content.
+                    </p>
 
-                <div class="f-webbutton">
-                    <p>Web Plans</p>
+                    <div class="f-webbutton">
+                        <a href="">Web Plans<i class="fas fa-play"></i></a>
+                    </div>
                 </div>
-            </div>
 
-            <!-- ***********************Print************************* -->
-            <div class="f-print">
-                <img class="f-printimg" src="images/print.jpg" alt="print image">
-                <h3>Print</h3>
-                <p class="print"> HTML (HyperText Markup Language) is the most basic building block of the Web.
-                    It defines the meaning and structure of web content.
-                </p>
+                <!-- ***********************Print************************* -->
+                <div class="service f-print">
+                    <img class="f-printimg" src="images/print.jpg" alt="print image">
+                    <h3>Print</h3>
+                    <p class="print"> HTML (HyperText Markup Language) is the most basic building block of the Web.
+                        It defines the meaning and structure of web content.
+                    </p>
 
-                <div class="f-printbutton">
-                    <p>Print Plans</p>
+                    <div class="f-printbutton">
+                        <a href="">Print Plans<i class="fas fa-play"></i></a>
+                    </div>
                 </div>
             </div>
         </section>
@@ -173,7 +176,7 @@
             </p>
 
             <div class="f-learnmorebutton">
-                <p>Learn More</p>
+                <a href="">Learn More<i class="fas fa-play"></i></a>
             </div>
             <!-- <a href="#connectus" class="connectus-link">Connect with us</a> -->
         </section>
@@ -257,9 +260,13 @@
                 </table>
             </section>
 
-            <div class="f-location">
+            <div class="f-location">
                 <h3>Location</h3>
-                <img class="mapimg" src="images/map.PNG" alt="map image">
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5607.915258700108!2d-75.75914377318216!3d45.349667566398914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0722395fc63d%3A0x35c46b5ff47a522!2sAlgonquin%20College%2C%201385%20Woodroffe%20Ave%2C%20Nepean%2C%20ON%20K2G%203G7!5e0!3m2!1szh-CN!2sca!4v1617743562529!5m2!1szh-CN!2sca"
+                        width="600"  height="450"  style="border:0;" 
+                        allowfullscreen=""
+                        loading="lazy">
+                </iframe>
             </div>
         </section>
 
