--- a/midterm/index.html
+++ b/midterm/index.html
@@ -39,7 +39,7 @@
                 <img class="starfishimg" src="images/lone-starfish.jpg" alt="Starfish image">
 
                 <p>
-                    Swallower catla Black angelfish grunter striped bass scissor-tail rasbora;
+                    Swallower catla #222 angelfish grunter striped bass scissor-tail rasbora;
                     slender mola. Snapper catalufa silver driftfish, kaluga lungfish boga greeneye,
                     &#34;french angelfish peamouth halfbeak batfish Australian prowfish mouthbrooder.&#34;
                     Gibberfish tui chub mooneye smoothtongue; amur pike barbeled houndshark dwarf
@@ -54,9 +54,9 @@
                     halibut. Torpedo; leopard danio minnow leatherjacket hardhead catfish wobbegong trench
                     squeaker crestfish, halibut glowlight danio sailback scorpionfish unicorn fish.
                     Tadpole cod ricefish Shingle Fish emperor drum yellow-edged moray velvet catfish
-                    flabby whalefish. Featherfin knifefish plaice pike eel tarwhine Black triggerfish
+                    flabby whalefish. Featherfin knifefish plaice pike eel tarwhine #222 triggerfish
                     pearl danio cownose ray. Merluccid hake, platy peamouth humuhumunukunukuapua&apos;a barred
-                    danio. Black dragonfish, stingray lightfish Australian lungfish searobin false trevally,
+                    danio. #222 dragonfish, stingray lightfish Australian lungfish searobin false trevally,
                     dottyback.
                 </p>
 
