--- a/final-project/index.html
+++ b/final-project/index.html
@@ -65,14 +65,14 @@
                 </p>
 
                 <div class="button f-connectbutton">
-                    <a href="">Connect Us <i class="fas fa-play"></i></a>
+                    <a href="#connectus">Connect Us <i class="fas fa-play"></i></a>
                 </div>
             </article>
             <!-- <a href="#connectus" class="connectus-link">Connect with us</a> -->
         </section>
 
         <!-- About us -->
-        <section class="box f-aboutus">
+        <section class="box f-aboutus" id="aboutus">
             <img class="f-sboutusimg" src="images/about-us.jpg" alt="about us image">
             <h2>About Us</h2>
             <p class="f-aboutusp">
@@ -92,7 +92,7 @@
         </section>
 
         <!--created our services section -->
-        <section class="box f-services">
+        <section class="box f-services" id="services">
 
             <h2>Our Services</h2>
             <div class="serveicespage">
@@ -182,7 +182,7 @@
         </section>
 
         <!-- ********************our team********************************* -->
-        <section class="box f-team">
+        <section class="box f-team" id="team" >
             <h2>Our Team</h2>
             <!-- *************John Doe******************* -->
             <div class="f-john">
@@ -210,7 +210,7 @@
         </section>
 
         <!-- **********************Contact Us********************************************* -->
-        <section class="box f-connectus">
+        <section class="box f-connectus" id="connectus">
             <h2>Contact Us</h2>
             <div class="f-message">
                 <h3>Send us a message</h3>
