--- a/final-project/index.html
+++ b/final-project/index.html
@@ -6,6 +6,8 @@
 <head>
     <meta charset="UTF-8">
     <script src="https://kit.fontawesome.com/931c767dbc.js" crossorigin="anonymous"></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap" rel="stylesheet">
     <title>
         Xiaoyu Ding Final Project
     </title>
@@ -50,7 +52,7 @@
     <!-- ***************Adding main part for the web page***************-->
     <main class="f-main">
         <!-- Adding home section  -->
-        <section class="box f-home">
+        <section class="box f-home" id="home">
             <!-- <img class="f-banner" src="images/main-banner.jpg" alt="f-banner"> -->
             <article>
                 <h1>
