--- a/final-project copy/index.html
+++ b/final-project copy/index.html
@@ -53,7 +53,6 @@
     <main class="f-main">
         <!-- Adding home section  -->
         <section class="box f-home" id="home">
-            <!-- <img class="f-banner" src="images/main-banner.jpg" alt="f-banner"> -->
             <article>
                 <h1>
                     Welcome to Three Star Media
@@ -84,6 +83,7 @@
                 (CSS)
                 or functionality/behavior (JavaScript).
             </p>
+
             <p class="f-aboutusp2">
                 HTML (HyperText Markup Language) is the most basic building block of the Web.
                 It defines the meaning and structure of web content.
@@ -98,6 +98,7 @@
 
             <h2>Our Services</h2>
             <div class="serveicespage">
+
                 <!-- *************digtal transformation *************-->
                 <div class="service f-digital">
                     <img class="f-digitalimg" src="images/digital.jpg" alt="digital image">
@@ -158,10 +159,12 @@
                         It defines the meaning and structure of web content.
                     </p>
 
+                    <!-- print button -->
                     <div class="f-printbutton">
                         <a href="">Print Plans<i class="fas fa-play"></i></a>
                     </div>
                 </div>
+
             </div>
         </section>
 
@@ -177,10 +180,10 @@
                 or functionality/behavior (JavaScript).
             </p>
 
+            <!-- learn button -->
             <div class="f-learnmorebutton">
                 <a href="">Learn More<i class="fas fa-play"></i></a>
             </div>
-            <!-- <a href="#connectus" class="connectus-link">Connect with us</a> -->
         </section>
 
         <!-- ********************our team********************************* -->
@@ -212,34 +215,45 @@
         </section>
 
         <!-- **********************Contact Us********************************************* -->
-        <section class="box f-connectus" id="connectus">
+        <div class="box f-connectus" id="connectus">
             <h2>Contact Us</h2>
+
             <div class="f-message">
                 <h3>Send us a message</h3>
+
+                <!-- contact form -->
                 <form class="f-box" action="Contact.html" method="get">
+
+                    <!-- name -->
                     <div>
                         <label class="fullname" for="fullname">Full Name</label>
                         <input class="nameinput" type="text" id="fullname" name="fullname">
                     </div>
 
+                    <!-- email -->
                     <div>
                         <label class="youremail" for="youremail">Email</label>
                         <input class="emailinput" type="email" id="youremail" name="youremail" required>
                     </div>
 
+                    <!--Message  -->
                     <div>
                         <label class="message" for="message">Message</label>
                         <textarea class="textarea" name="message" id="message"></textarea>
                     </div>
 
+                    <!-- send  -->
                     <div class="sendbutton">
                         <p class="send">Send</p>
                     </div>
+
                 </form>
+
             </div>
+        </div>
 
             <!-- *********************Hours of operation*************************************** -->
-            <section class="box f-hours">
+        <div class="box f-hours">
                 <h2>Hours of operation</h2>
                 <table>
                     <thead>
@@ -260,18 +274,14 @@
                         </tr>
                     </tbody>
                 </table>
-            </section>
-
-            <div class="f-location">
-                <h3>Location</h3>
-                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5607.915258700108!2d-75.75914377318216!3d45.349667566398914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0722395fc63d%3A0x35c46b5ff47a522!2sAlgonquin%20College%2C%201385%20Woodroffe%20Ave%2C%20Nepean%2C%20ON%20K2G%203G7!5e0!3m2!1szh-CN!2sca!4v1617743562529!5m2!1szh-CN!2sca"
-                        width="600"  height="450"  style="border:0;" 
-                        allowfullscreen=""
-                        loading="lazy">
-                </iframe>
-            </div>
-        </section>
-
+        </div>
+        
+ <!-- *********************location*************************************** -->
+        <div class="location">
+            <h3>Location</h3>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5607.915258700108!2d-75.75914377318216!3d45.349667566398914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0722395fc63d%3A0x35c46b5ff47a522!2sAlgonquin%20College%2C%201385%20Woodroffe%20Ave%2C%20Nepean%2C%20ON%20K2G%203G7!5e0!3m2!1szh-CN!2sca!4v1617743562529!5m2!1szh-CN!2sca">
+            </iframe>
+        </div>
 
     </main>
 
@@ -280,6 +290,7 @@
         <p class="footer1">&copy;Copyright Three Star Media, 2020</p>
         <p class="footer1">All images are taken from Unsplash</p>
     </footer>
+
 </body>
 
 </html>
