--- a/final-project copy/index.html
+++ b/final-project copy/index.html
@@ -51,8 +51,8 @@
 
     <!-- ***************Adding main part for the web page***************-->
     <main class="f-main">
-        <!-- Adding home section  -->
-        <section class="box f-home" id="home">
+        <!-- Adding home div  -->
+        <div class="box f-home" id="home">
             <article>
                 <h1>
                     Welcome to Three Star Media
@@ -70,10 +70,10 @@
                 </div>
             </article>
             <!-- <a href="#connectus" class="connectus-link">Connect with us</a> -->
-        </section>
+        </div>
 
         <!-- About us -->
-        <section class="box f-aboutus" id="aboutus">
+        <div class="box f-aboutus" id="aboutus">
             <img class="f-sboutusimg" src="images/about-us.jpg" alt="about us image">
             <h2>About Us</h2>
             <p class="f-aboutusp">
@@ -91,10 +91,10 @@
                 (CSS)
                 or functionality/behavior (JavaScript).
             </p>
-        </section>
+        </div>
 
-        <!--created our services section -->
-        <section class="box f-services" id="services">
+        <!--created our services div -->
+        <div class="box f-services" id="services">
 
             <h2>Our Services</h2>
             <div class="serveicespage">
@@ -166,10 +166,10 @@
                 </div>
 
             </div>
-        </section>
+        </div>
 
         <!-- ******************Our Vision****************************** -->
-        <section class="box f-vision">
+        <div class="box f-vision">
             <h2 class="vision-title"> Our Vision</h2>
 
             <p class="f-visionp">
@@ -184,10 +184,10 @@
             <div class="f-learnmorebutton">
                 <a href="">Learn More<i class="fas fa-play"></i></a>
             </div>
-        </section>
+        </div>
 
         <!-- ********************our team********************************* -->
-        <section class="box f-team" id="team" >
+        <div class="box f-team" id="team" >
             <h2>Our Team</h2>
             <!-- *************John Doe******************* -->
             <div class="f-john">
@@ -212,7 +212,7 @@
                     It defines the meaning and structure of web content.
                 </p>
             </div>
-        </section>
+        </div>
 
         <!-- **********************Contact Us********************************************* -->
         <div class="box f-connectus" id="connectus">
