--- a/html-assignment/index.html
+++ b/html-assignment/index.html
@@ -24,11 +24,11 @@
     <!-- ***************Adding main part for the web page***************-->
     <main>
         <article>
-            <!-- ***************Adding three sections for the web page***************-->
+            <!-- ***************Adding three divs for the web page***************-->
             <h2 class="site-title">About Me</h2>
 
-            <!-- ***************section 1 Background Introduction***************-->
-            <section>
+            <!-- ***************div 1 Background Introduction***************-->
+            <div>
                 <h3>Background Introduction</h3>
                 <p>
                     My name is Xiaoyu Ding. I am came from China and 2021 is 8<sup>th</sup> year that I have been living
@@ -44,11 +44,11 @@
                     In this semster I started learning <abbr title="Hypertext Markup Language">HTML</abbr>
                     and <abbr title="Cascading Style Sheets">CSS</abbr> I belive thoese things gona be very cool for me.
                 </p>
-            </section>
+            </div>
             <hr>
 
-            <!-- ***************section 2 My hobbies***************-->
-            <section>
+            <!-- ***************div 2 My hobbies***************-->
+            <div>
                 <h3>My hobbies</h3>
                 <img id="skating" src="images/Skating.jpg" alt="Skating">
                 <img id="drawing" src="images/Drawing.jpg" alt="Drawing">
@@ -71,11 +71,11 @@
                         and the tools used to paint can be brushes, knives, sponges, even paint sprayers,
                         toothbrushes, fingers, and so on.</li>
                 </ul>
-            </section>
+            </div>
             <hr>
 
-            <!-- ***************section 3 My Favorite Inspirational Quotes***************-->
-            <section>
+            <!-- ***************div 3 My Favorite Inspirational Quotes***************-->
+            <div>
                 <h3>My Favorite Inspirational Quotes</h3>
 
 
@@ -100,7 +100,7 @@
                         </blockquote>
                     </li>
                 </ul>
-            </section>
+            </div>
         </article>
     </main>
 
