--- a/html-assignment/notes.html
+++ b/html-assignment/notes.html
@@ -23,11 +23,11 @@
     <!-- ***************Adding main part for the web page***************-->
     <main>
         <article>
-            <!-- ***************Adding three sections for the web page***************-->
+            <!-- ***************Adding three divs for the web page***************-->
             <h2>5 HTML Tags</h2>
 
-            <!-- ***************section of 5 HTML tags***************-->
-            <section>
+            <!-- ***************div of 5 HTML tags***************-->
+            <div>
                 <h3>Introduction About 5 HTML Tags</h3>
                 <dl>
                     <dt><em><b> &#60;!DOCTYPE&#62;</b></em></dt>
@@ -37,15 +37,15 @@
                     <dd>Defines the title of a work</dd>
 
                     <dt><em><b>&#60;blockquote&#62;</b></em></dt>
-                    <dd>Defines a section that is quoted from another source</dd>
+                    <dd>Defines a div that is quoted from another source</dd>
 
                     <dt><em><b>&#60;div&#62;</b></em></dt>
-                    <dd>Defines a section in a document</dd>
+                    <dd>Defines a div in a document</dd>
 
                     <dt><em><b>&#60;footer&#62;</b></em></dt>
-                    <dd>Defines a footer for a document or section</dd>
+                    <dd>Defines a footer for a document or div</dd>
                 </dl>
-            </section>
+            </div>
 
         </article>
     </main>
