--- a/midterm/index.html
+++ b/midterm/index.html
@@ -60,7 +60,7 @@
                     dottyback.
                 </p>
 
-                <section>
+                <div>
                     <h3>Facts About Starfish</h3>
                     <ul>
                         <li class="li-1">Australian herring barbel Mexican golden trout, killifish bonito; northern
@@ -71,11 +71,11 @@
                         <li class="li-4">Waryfish, &#34;lionfish; longfin smelt; leopard danio dragonfish,&#34; Lost
                             River sucker, mojarra. </li>
                     </ul>
-                </section>
+                </div>
             </article>
         </div>
-        <!-- *******about section of the artcle*******-->
-        <section>
+        <!-- *******about div of the artcle*******-->
+        <div>
             <h3>Contact to learn more</h3>
             <form class="box" action="Contact.html" method="get">
                 <div>
@@ -111,7 +111,7 @@
                 </div>
 
             </form>
-        </section>
+        </div>
     </main>
 
     <!-- *******footer*******-->
