--- a/week3/index.html
+++ b/week3/index.html
@@ -29,13 +29,13 @@
                 Celebrating their 10<sup>th</sup> anniversary together in December 2021.
             </p>
             <hr>
-            <section>
+            <div>
                 <h3>About Us</h3>
                 <p>
                     We are a local coffee shop based in Ottawwa. Our specialty is
                     <b>organic fair-trade</b>Coffee.
                 </p>
-            </section>
+            </div>
         </article>
         <aside>
             <h3>Merchandise</h3>
@@ -45,15 +45,15 @@
                 <li>Hoodies</li>
             </ul>
         </aside>
-        <!-- *******about section of the artcle*******-->
-        <section>
+        <!-- *******about div of the artcle*******-->
+        <div>
             <h3>Events</h3>
             <ol>
                 <li>Feb 23<sup>rd</sup>&hyphen; Coffee for Hope Foundation</li>
                 <li>Mar 17<sup>th</sup>&hyphen; Live Music</li>
             </ol>
-        </section>
-        <section>
+        </div>
+        <div>
             <h3>Treat of the Week</h3>
             <dl>
                 <dt>Name</dt>
@@ -78,7 +78,7 @@
                     </ul>
                 </dd>
             </dl>
-        </section>
+        </div>
     </main>
     <!-- *******footer*******-->
     <footer>
