--- a/week4/contact.html
+++ b/week4/contact.html
@@ -57,7 +57,7 @@
 
         </table>
 
-        <section>
+        <div>
             <h3>We love to hear from you</h3>
             <form action="thanks.html" method="get">
                 <div>
@@ -106,7 +106,7 @@
                 <button type="submit">Sign me up!</button>
 
             </form>
-        </section>
+        </div>
     </main>
     <!-- *******footer*******-->
     <footer>
