--- a/week7/index.html
+++ b/week7/index.html
@@ -46,13 +46,13 @@
                 Celebrating their 10<sup>th</sup> anniversary together in December 2021.
             </p>
             <hr>
-            <section>
+            <div>
                 <h3>About Us</h3>
                 <p>
                     We are a local coffee shop based in Ottawwa. Our specialty is
                     <b>organic fair-trade</b>Coffee.
                 </p>
-            </section>
+            </div>
         </article>
         <aside>
             <h3>Merchandise</h3>
@@ -63,16 +63,16 @@
             </ul>
         </aside>
     </div>
-        <!-- *******about section of the artcle*******-->
-        <section>
+        <!-- *******about div of the artcle*******-->
+        <div>
             <h3>Events</h3>
             <ol>
                 <li>Feb 23<sup>rd</sup>&hyphen; Coffee for Hope Foundation</li>
                 <li>Mar 17<sup>th</sup>&hyphen; Live Music</li>
             </ol>
-        </section>
-        <!--*********************treat of week section********************-->
-        <section id="treatofweek">
+        </div>
+        <!--*********************treat of week div********************-->
+        <div id="treatofweek">
             <h3>Treat of the Week</h3>
             <dl>
                 <dt>Name</dt>
@@ -99,10 +99,10 @@
             </dl>
             <a href="https://www.yummly.com/recipe/Banana-Bread-1033797?prm-v1" 
             target="_blank" class="orange-link larg-text">Get the Recipe</a>
-        </section>
+        </div>
 
-        <!-- Adding Section for menu -->
-        <section>
+        <!-- Adding div for menu -->
+        <div>
             <h3>Menu Specials</h3>
             <table>
                 <thead>
@@ -128,7 +128,7 @@
                     </tr>
                 </tbody>
             </table>
-        </section>
+        </div>
     </main>
     <!-- *******footer*******-->
     <footer class="site-footer">
