--- a/week7/contact.html
+++ b/week7/contact.html
@@ -58,7 +58,7 @@
 
         </table>
 
-        <section>
+        <div>
             <h3>We love to hear from you</h3>
             <form action="thanks.html" method="get">
                 <div>
@@ -107,7 +107,7 @@
                 <button type="submit">Sign me up!</button>
 
             </form>
-        </section>
+        </div>
     </main>
     <!-- *******footer*******-->
     <footer>
