--- a/final-project copy/index.html
+++ b/final-project copy/index.html
@@ -65,9 +65,11 @@
                     or functionality/behavior (JavaScript).
                 </p>
 
+                <!-- connect us button -->
                 <div class="button f-connectbutton">
                     <a href="#connectus">Connect Us <i class="fas fa-play"></i></a>
                 </div>
+
             </article>
             <!-- <a href="#connectus" class="connectus-link">Connect with us</a> -->
         </div>
@@ -96,11 +98,11 @@
         <!--created our services div -->
         <div class="box f-services" id="services">
 
-            <h2>Our Services</h2>
+            <h2 class="ser">Our Services</h2>
             <div class="serveicespage">
 
                 <!-- *************digtal transformation *************-->
-                <div class="service f-digital">
+                <div class="service">
                     <img class="f-digitalimg" src="images/digital.jpg" alt="digital image">
                     <h3>Digtal Transformation</h3>
                     <p class="digital"> HTML (HyperText Markup Language) is the most basic building block of the Web.
@@ -113,7 +115,7 @@
                 </div>
 
                 <!-- *************Marketing******************* -->
-                <div class="service f-marketing">
+                <div class="service">
                     <img class="f-marketingimg" src="images/marketing.jpg" alt="marketing image">
                     <h3>Marketing</h3>
                     <p class="marketing"> HTML (HyperText Markup Language) is the most basic building block of the Web.
@@ -126,7 +128,7 @@
                 </div>
 
                 <!-- ********************Video Production**************************** -->
-                <div class="service f-video">
+                <div class="service">
                     <img class="f-videoimg" src="images/video.jpg" alt="video image">
                     <h3>Video Production</h3>
                     <p class="video"> HTML (HyperText Markup Language) is the most basic building block of the Web.
@@ -139,7 +141,7 @@
                 </div>
 
                 <!-- *********************Web Development*************************** -->
-                <div class="service f-web">
+                <div class="service">
                     <img class="f-webimg" src="images/web.jpg" alt="web image">
                     <h3>Web Development</h3>
                     <p class="web"> HTML (HyperText Markup Language) is the most basic building block of the Web.
@@ -152,7 +154,7 @@
                 </div>
 
                 <!-- ***********************Print************************* -->
-                <div class="service f-print">
+                <div class="service">
                     <img class="f-printimg" src="images/print.jpg" alt="print image">
                     <h3>Print</h3>
                     <p class="print"> HTML (HyperText Markup Language) is the most basic building block of the Web.
@@ -190,7 +192,7 @@
         <div class="box f-team" id="team" >
             <h2>Our Team</h2>
             <!-- *************John Doe******************* -->
-            <div class="f-john">
+            <div class="team">
                 <img class="f-johnimg" src="images/john.jpg" alt="john image">
                 <h3>John Doe</h3>
                 <h4>CEO and Co-owner</h4>
@@ -202,7 +204,7 @@
             </div>
 
             <!-- *************Bob Rite******************* -->
-            <div class="f-bob">
+            <div class="team">
                 <img class="f-bobimg" src="images/bob.jpg" alt="bob image">
                 <h3>Bob Rite</h3>
                 <h4>CFO and Co-owner</h4>
@@ -222,7 +224,7 @@
                 <h3>Send us a message</h3>
 
                 <!-- contact form -->
-                <form class="f-box" action="Contact.html" method="get">
+                <form class="f-contactform" action="Contact.html" method="get">
 
                     <!-- name -->
                     <div>
@@ -279,10 +281,10 @@
  <!-- *********************location*************************************** -->
         <div class="location">
             <h3>Location</h3>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5607.915258700108!2d-75.75914377318216!3d45.349667566398914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0722395fc63d%3A0x35c46b5ff47a522!2sAlgonquin%20College%2C%201385%20Woodroffe%20Ave%2C%20Nepean%2C%20ON%20K2G%203G7!5e0!3m2!1szh-CN!2sca!4v1617743562529!5m2!1szh-CN!2sca">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5607.915258700108!2d-75.75914377318216!3d45.349667566398914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0722395fc63d%3A0x35c46b5ff47a522!2sAlgonquin%20College%2C%201385%20Woodroffe%20Ave%2C%20Nepean%2C%20ON%20K2G%203G7!5e0!3m2!1szh-CN!2sca!4v1617743562529!5m2!1szh-CN!2sca"
+            width="100%" height="400" style="border: none;">
             </iframe>
         </div>
-
     </main>
 
     <!-- ***************Adding footer***************-->
