--- a/final-project/index.html
+++ b/final-project/index.html
@@ -98,11 +98,11 @@
         <!--created our services div -->
         <div class="box f-services" id="services">
 
-            <h2>Our Services</h2>
+            <h2 class="ser">Our Services</h2>
             <div class="serveicespage">
 
                 <!-- *************digtal transformation *************-->
-                <div class="service f-digital">
+                <div class="service">
                     <img class="f-digitalimg" src="images/digital.jpg" alt="digital image">
                     <h3>Digtal Transformation</h3>
                     <p class="digital"> HTML (HyperText Markup Language) is the most basic building block of the Web.
@@ -115,7 +115,7 @@
                 </div>
 
                 <!-- *************Marketing******************* -->
-                <div class="service f-marketing">
+                <div class="service">
                     <img class="f-marketingimg" src="images/marketing.jpg" alt="marketing image">
                     <h3>Marketing</h3>
                     <p class="marketing"> HTML (HyperText Markup Language) is the most basic building block of the Web.
@@ -128,7 +128,7 @@
                 </div>
 
                 <!-- ********************Video Production**************************** -->
-                <div class="service f-video">
+                <div class="service">
                     <img class="f-videoimg" src="images/video.jpg" alt="video image">
                     <h3>Video Production</h3>
                     <p class="video"> HTML (HyperText Markup Language) is the most basic building block of the Web.
@@ -141,7 +141,7 @@
                 </div>
 
                 <!-- *********************Web Development*************************** -->
-                <div class="service f-web">
+                <div class="service">
                     <img class="f-webimg" src="images/web.jpg" alt="web image">
                     <h3>Web Development</h3>
                     <p class="web"> HTML (HyperText Markup Language) is the most basic building block of the Web.
@@ -154,7 +154,7 @@
                 </div>
 
                 <!-- ***********************Print************************* -->
-                <div class="service f-print">
+                <div class="service">
                     <img class="f-printimg" src="images/print.jpg" alt="print image">
                     <h3>Print</h3>
                     <p class="print"> HTML (HyperText Markup Language) is the most basic building block of the Web.
@@ -192,7 +192,7 @@
         <div class="box f-team" id="team" >
             <h2>Our Team</h2>
             <!-- *************John Doe******************* -->
-            <div class="f-john">
+            <div class="team">
                 <img class="f-johnimg" src="images/john.jpg" alt="john image">
                 <h3>John Doe</h3>
                 <h4>CEO and Co-owner</h4>
@@ -204,7 +204,7 @@
             </div>
 
             <!-- *************Bob Rite******************* -->
-            <div class="f-bob">
+            <div class="team">
                 <img class="f-bobimg" src="images/bob.jpg" alt="bob image">
                 <h3>Bob Rite</h3>
                 <h4>CFO and Co-owner</h4>
