--- a/final-project/index.html
+++ b/final-project/index.html
@@ -191,28 +191,39 @@
         <!-- ********************our team********************************* -->
         <div class="box f-team" id="team" >
             <h2>Our Team</h2>
+           
+            <div class="teampage">
             <!-- *************John Doe******************* -->
-            <div class="team">
-                <img class="f-johnimg" src="images/john.jpg" alt="john image">
-                <h3>John Doe</h3>
-                <h4>CEO and Co-owner</h4>
-                <hr>
-                <p class="john">
-                    HTML (HyperText Markup Language) is the most basic building block of the Web.
-                    It defines the meaning and structure of web content.
-                </p>
-            </div>
+                <!-- john image -->
+                <div class="team">
+                    <img class="f-johnimg" src="images/john.jpg" alt="john image">
+                </div>
+                <!-- john infor -->
+                <div class="team"> 
+                    <h3>John Doe</h3>
+                    <h4>CEO and Co-owner</h4>
+                    <hr>
+                    <p class="john">
+                        HTML (HyperText Markup Language) is the most basic building block of the Web.
+                        It defines the meaning and structure of web content.
+                    </p>
+                </div>
 
             <!-- *************Bob Rite******************* -->
-            <div class="team">
-                <img class="f-bobimg" src="images/bob.jpg" alt="bob image">
-                <h3>Bob Rite</h3>
-                <h4>CFO and Co-owner</h4>
-                <hr>
-                <p class="bob">
-                    HTML (HyperText Markup Language) is the most basic building block of the Web.
-                    It defines the meaning and structure of web content.
-                </p>
+                <!-- bob image -->
+                <div class="team">
+                    <img class="f-bobimg" src="images/bob.jpg" alt="bob image">
+                </div>
+                <!-- bob infor -->
+                <div class="team">
+                    <h3>Bob Rite</h3>
+                    <h4>CFO and Co-owner</h4>
+                    <hr>
+                    <p class="bob">
+                        HTML (HyperText Markup Language) is the most basic building block of the Web.
+                        It defines the meaning and structure of web content.
+                    </p>
+                </div>
             </div>
         </div>
 
