--- a/final-project/index.html
+++ b/final-project/index.html
@@ -228,73 +228,75 @@
         </div>
 
         <!-- **********************Contact Us********************************************* -->
-        <div class="box f-connectus" id="connectus">
+        <div class="f-connectus" id="connectus">
             <h2>Contact Us</h2>
+            <div class="connectuspage">
+                <!-- ***************message form*************-->
+                <div class="us">
+                    <h3>Send us a message</h3>
 
-            <div class="f-message">
-                <h3>Send us a message</h3>
+                    <!-- contact form -->
+                    <form class="f-contactform" action="Contact.html" method="get">
 
-                <!-- contact form -->
-                <form class="f-contactform" action="Contact.html" method="get">
+                        <!-- name -->
+                        <div>
+                            <label class="fullname" for="fullname">Full Name</label>
+                            <input class="nameinput" type="text" id="fullname" name="fullname">
+                        </div>
 
-                    <!-- name -->
-                    <div>
-                        <label class="fullname" for="fullname">Full Name</label>
-                        <input class="nameinput" type="text" id="fullname" name="fullname">
-                    </div>
+                        <!-- email -->
+                        <div>
+                            <label class="youremail" for="youremail">Email</label>
+                            <input class="emailinput" type="email" id="youremail" name="youremail" required>
+                        </div>
 
-                    <!-- email -->
-                    <div>
-                        <label class="youremail" for="youremail">Email</label>
-                        <input class="emailinput" type="email" id="youremail" name="youremail" required>
-                    </div>
+                        <!--Message  -->
+                        <div>
+                            <label class="message" for="message">Message</label>
+                            <textarea class="textarea" name="message" id="message"></textarea>
+                        </div>
 
-                    <!--Message  -->
-                    <div>
-                        <label class="message" for="message">Message</label>
-                        <textarea class="textarea" name="message" id="message"></textarea>
-                    </div>
+                        <!-- send  -->
+                        <div class="sendbutton">
+                            <p class="send">Send</p>
+                        </div>
 
-                    <!-- send  -->
-                    <div class="sendbutton">
-                        <p class="send">Send</p>
-                    </div>
+                    </form>
 
-                </form>
+                </div>
 
+                <!-- ************Hours of operation********* -->
+                <div class="us">
+                        <h3>Hours of operation</h3>
+                        <table>
+                            <thead>
+                                <tr>
+                                    <th>Days</th>
+                                    <th>Hours</th>
+                                </tr>
+                            </thead>
+
+                            <tbody>
+                                <tr>
+                                    <td>Monday-Friday</td>
+                                    <td>9 AM - 6 PM</td>
+                                </tr>
+                                <tr>
+                                    <td>Saturday-Sunday</td>
+                                    <td>Closed</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                </div>
+                
+                <!-- **************location***************** -->
+                <div class="us">
+                    <h3>Location</h3>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5607.915258700108!2d-75.75914377318216!3d45.349667566398914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0722395fc63d%3A0x35c46b5ff47a522!2sAlgonquin%20College%2C%201385%20Woodroffe%20Ave%2C%20Nepean%2C%20ON%20K2G%203G7!5e0!3m2!1szh-CN!2sca!4v1617743562529!5m2!1szh-CN!2sca"
+                    width="100%" height="400" style="border: none;">
+                    </iframe>
+                </div>
             </div>
-        </div>
-
-            <!-- *********************Hours of operation*************************************** -->
-        <div class="box f-hours">
-                <h2>Hours of operation</h2>
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Days</th>
-                            <th>Hours</th>
-                        </tr>
-                    </thead>
-
-                    <tbody>
-                        <tr>
-                            <td>Monday-Friday</td>
-                            <td>9 AM - 6 PM</td>
-                        </tr>
-                        <tr>
-                            <td>Saturday-Sunday</td>
-                            <td>Closed</td>
-                        </tr>
-                    </tbody>
-                </table>
-        </div>
-        
- <!-- *********************location*************************************** -->
-        <div class="location">
-            <h3>Location</h3>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5607.915258700108!2d-75.75914377318216!3d45.349667566398914!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4cce0722395fc63d%3A0x35c46b5ff47a522!2sAlgonquin%20College%2C%201385%20Woodroffe%20Ave%2C%20Nepean%2C%20ON%20K2G%203G7!5e0!3m2!1szh-CN!2sca!4v1617743562529!5m2!1szh-CN!2sca"
-            width="100%" height="400" style="border: none;">
-            </iframe>
         </div>
     </main>
 
