--- a/final-project/index.html
+++ b/final-project/index.html
@@ -109,7 +109,7 @@
                         It defines the meaning and structure of web content.
                     </p>
 
-                    <div class="f-digitalbutton">
+                    <div class="servicebutton">
                         <a href="">Digital Plans<i class="fas fa-play"></i></a>
                     </div>
                 </div>
@@ -122,7 +122,7 @@
                         It defines the meaning and structure of web content.
                     </p>
 
-                    <div class="f-marketingbutton">
+                    <div class="servicebutton">
                         <a href="">Marketing Plans<i class="fas fa-play"></i></a>
                     </div>
                 </div>
@@ -135,7 +135,7 @@
                         It defines the meaning and structure of web content.
                     </p>
 
-                    <div class="f-videobutton">
+                    <div class="servicebutton">
                         <a href="">Video Plans<i class="fas fa-play"></i></a>
                     </div>
                 </div>
@@ -148,7 +148,7 @@
                         It defines the meaning and structure of web content.
                     </p>
 
-                    <div class="f-webbutton">
+                    <div class="servicebutton">
                         <a href="">Web Plans<i class="fas fa-play"></i></a>
                     </div>
                 </div>
@@ -162,7 +162,7 @@
                     </p>
 
                     <!-- print button -->
-                    <div class="f-printbutton">
+                    <div class="servicebutton">
                         <a href="">Print Plans<i class="fas fa-play"></i></a>
                     </div>
                 </div>
