fix pictures size

--- a/mtm6201/mtm6201-picture-this-master/index.html
+++ b/mtm6201/mtm6201-picture-this-master/index.html
@@ -15,16 +15,14 @@
       <h1>Picture This!</h1>
       <h4>My Really Cool Blog Post</h4>
     </div>
-    <img src="images/museum.jpg" alt="placeholder">
     <img
-    src="images/museum.jpg" 
+    src="images/museum.jpg"
     alt="Picture of museum"
-    srcset="images/museum-320px.jpg 320w,
+    srcset="images/museum-320.jpg 320w,
             images/museum-480px.jpg 480w,
             images/museum-720px.jpg 720w,
             images/museum-960px.jpg 960w"
-    sizes="(min-width: 960px) 50vw 100vw">
-
+    sizes="(min-width: 960px) 50vw 100vw"> 
   </header>
 </body>
 
