--- a/mtm6201/mtm6201-picture-this-master/index.html
+++ b/mtm6201/mtm6201-picture-this-master/index.html
@@ -22,7 +22,7 @@
             images/museum-480px.jpg 480w,
             images/museum-720px.jpg 720w,
             images/museum-960px.jpg 960w"
-    sizes="(min-width: 960px) 50vw 100vw"> 
+    sizes="(min-width: 960px) 50vw，100vw"> 
   </header>
 </body>
 
