--- a/mtm6201/landing-page/index.html
+++ b/mtm6201/landing-page/index.html
@@ -47,7 +47,7 @@
                   <label for="agreement"> I agree to dash terms</label>
                 </div> 
 
-                <button type="button">DRIVE WITH US</button>
+                <button Class="drive" type="button">DRIVE WITH US</button>
 
                 <div class="footer cf">
                     <p>Already applied?</p>
@@ -71,8 +71,8 @@
                 <input type="text" id="input-city" placeholder="City">
             </div>
 
-            <div class="calculate">
-                <button type="calculate"></button>
+            <div>
+                <button class="calculate" type="button">CALCULATE</button>
             </div>
         </form>
       
